--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>App Name</title>
 
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/dynamic.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap" rel="stylesheet">
@@ -22,20 +23,17 @@
     <main>
         <div class="pc-container">
             <div class="pc-container-search">
-                <input type="text" placeholder="Enter name of a computer">
-                <button>Search</button>
+                <input id="search-input" type="search" placeholder="Enter name of a computer">
+                <button id="search-clear-btn">
+                    <i class="fa-solid fa-xmark"></i>
+                </button>
             </div>
             <div class="pc-container-window-controls-wrapper">
-                <div class="pc-container-window">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                <div id="pc-container-window" class="pc-container-window">
+                    <!-- DYNAMIC CONTENT -->
                 </div>
                 <div class="pc-container-controls">
-                    <button class="pc-container-controls-add">
+                    <button id="pc-container-add-btn" class="pc-container-controls-add">
                         <i class="fa-solid fa-plus"></i>
                     </button>
                     <button class="pc-container-controls-placeholder"></button>
@@ -43,16 +41,30 @@
             </div>
         </div>
         <div class="comparator-container">
-            <div class="comparator-container-window">
-
+            <div id="comparator-container-window" class="comparator-container-window">
+                <!-- DYNAMIC CONTENT -->
             </div>
             <div class="comparator-container-controls">
-                <button class="comparator-container-controls-clear">Clear</button>
-                <button class="comparator-container-controls-reset">Reset scores</button>
-                <button class="comparator-container-controls-compare">Compare</button>
+                <button id="comparator-clear-btn" class="comparator-container-controls-clear">Clear</button>
+                <button id="comparator-reset-btn" class="comparator-container-controls-reset">Reset scores</button>
+                <button id="comparator-compare-btn" class="comparator-container-controls-compare">Compare</button>
             </div>
         </div>
     </main>
+
+    <div class="modal-overlay" id="modal">
+        <div class="modal">
+            <div class="modal-header">
+                <div class="modal-title">Create a new Computer</div>
+                <span  id="modal-close-btn" class="modal-close-btn">&times;</span>
+            </div>
+
+            <div id="modal-content" class="modal-content">
+                <!-- DYNAMIC CONTENT -->
+            </div>
+            <button id="modal-action-btn" class="modal-action-btn">Add</button>
+        </div>
+    </div>
 
     <script src="https://kit.fontawesome.com/61a3b44f9f.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
